--- a/IaC/xpipe-dorjecurreli/iam-v1-api-collector/db.yaml
+++ b/IaC/xpipe-dorjecurreli/iam-v1-api-collector/db.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: iam-v1-api-collector-db-config
-  namespace: xpipe-lucapitzoi
+  namespace: xpipe-dorjecurreli
 data:
   MYSQL_MAX_CONNECTIONS: "500"
 ---
@@ -11,7 +11,7 @@ kind: Secret
 type: Opaque
 metadata:
   name: iam-v1-api-collector-db-secret
-  namespace: xpipe-lucapitzoi
+  namespace: xpipe-dorjecurreli
 stringData:
   MYSQL_ROOT_PASSWORD: "secret"
   MYSQL_DATABASE: "app"
@@ -24,7 +24,7 @@ metadata:
   labels:
     app: iam-v1-api-collector-db
   name: iam-v1-api-collector-db-pvc
-  namespace: xpipe-lucapitzoi
+  namespace: xpipe-dorjecurreli
 #provisioner: kubernetes.io/aws-ebs
 spec:
   accessModes:
@@ -40,7 +40,7 @@ metadata:
   labels:
     app: iam-v1-api-collector-db
   name: iam-v1-api-collector-db
-  namespace: xpipe-lucapitzoi
+  namespace: xpipe-dorjecurreli
 spec:
   replicas: 1
   revisionHistoryLimit: 10
@@ -172,7 +172,7 @@ metadata:
   labels:
     app: iam-v1-api-collector-db
   name: iam-v1-api-collector-db
-  namespace: xpipe-lucapitzoi
+  namespace: xpipe-dorjecurreli
 spec:
   ports:
   - name: mysql
