--- a/IaC/xpipe-dorjecurreli/iam-v1-api-collector/idx.yaml
+++ b/IaC/xpipe-dorjecurreli/iam-v1-api-collector/idx.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: iam-v1-api-collector-idx-config
-  namespace: xpipe-lucapitzoi
+  namespace: xpipe-dorjecurreli
 data:
   ES_JAVA_OPTS: "-Xmx1024m -Xms1024m"
   cluster.name: "iam-v1-api-collector"
@@ -16,7 +16,7 @@ kind: Secret
 type: Opaque
 metadata:
   name: iam-v1-api-collector-idx-secret
-  namespace: xpipe-lucapitzoi
+  namespace: xpipe-dorjecurreli
 stringData:
   ELASTIC_PASSWORD: "secret"
 ---
@@ -26,7 +26,7 @@ metadata:
   labels:
     app: iam-v1-api-collector-idx
   name: iam-v1-api-collector-idx-pvc
-  namespace: xpipe-lucapitzoi
+  namespace: xpipe-dorjecurreli
 #provisioner: kubernetes.io/aws-ebs
 spec:
   accessModes:
@@ -42,7 +42,7 @@ metadata:
   labels:
     app: iam-v1-api-collector-idx
   name: iam-v1-api-collector-idx
-  namespace: xpipe-lucapitzoi
+  namespace: xpipe-dorjecurreli
 spec:
   replicas: 1
   revisionHistoryLimit: 10
@@ -171,7 +171,7 @@ metadata:
   labels:
     app: iam-v1-api-collector-idx
   name: iam-v1-api-collector-idx
-  namespace: xpipe-lucapitzoi
+  namespace: xpipe-dorjecurreli
 spec:
   ports:
   - name: elasticsearch
