--- a/IaC/xpipe-dorjecurreli/iam-v1-api-collector/pvc.yaml
+++ b/IaC/xpipe-dorjecurreli/iam-v1-api-collector/pvc.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: iam-v1-api-collector
   name: iam-v1-api-collector-static-pvc
-  namespace: xpipe-lucapitzoi
+  namespace: xpipe-dorjecurreli
 #provisioner: kubernetes.io/aws-ebs
 spec:
   accessModes:
@@ -21,7 +21,7 @@ metadata:
   labels:
     app: iam-v1-api-collector
   name: iam-v1-api-collector-media-pvc
-  namespace: xpipe-lucapitzoi
+  namespace: xpipe-dorjecurreli
 #provisioner: kubernetes.io/aws-ebs
 spec:
   accessModes:
@@ -37,7 +37,7 @@ metadata:
   labels:
     app: iam-v1-api-collector
   name: iam-v1-api-collector-generated-pvc
-  namespace: xpipe-lucapitzoi
+  namespace: xpipe-dorjecurreli
 #provisioner: kubernetes.io/aws-ebs
 spec:
   accessModes:
@@ -53,7 +53,7 @@ metadata:
   labels:
     app: iam-v1-api-collector
   name: iam-v1-api-collector-var-pvc
-  namespace: xpipe-lucapitzoi
+  namespace: xpipe-dorjecurreli
 #provisioner: kubernetes.io/aws-ebs
 spec:
   accessModes:
@@ -69,7 +69,7 @@ metadata:
   labels:
     app: iam-v1-api-collector
   name: iam-v1-api-collector-vendor-pvc
-  namespace: xpipe-lucapitzoi
+  namespace: xpipe-dorjecurreli
 #provisioner: kubernetes.io/aws-ebs
 spec:
   accessModes:
@@ -85,7 +85,7 @@ spec:
 #  labels:
 #    app: iam-v1-api-collector
 #  name: iam-v1-api-collector-composerlock-pvc
-#  namespace: xpipe-lucapitzoi
+#  namespace: xpipe-dorjecurreli
 ##provisioner: kubernetes.io/aws-ebs
 #spec:
 #  accessModes:
