--- a/IaC/xpipe-dorjecurreli/lab-v1-api-collector/db.yaml
+++ b/IaC/xpipe-dorjecurreli/lab-v1-api-collector/db.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: iam-v1-api-collector-db-config
-  namespace: xpipe-lucapitzoi
+  name: lab-v1-api-collector-db-config
+  namespace: xpipe-dorjecurreli
 data:
   MYSQL_MAX_CONNECTIONS: "500"
 ---
@@ -10,8 +10,8 @@ apiVersion: v1
 kind: Secret
 type: Opaque
 metadata:
-  name: iam-v1-api-collector-db-secret
-  namespace: xpipe-lucapitzoi
+  name: lab-v1-api-collector-db-secret
+  namespace: xpipe-dorjecurreli
 stringData:
   MYSQL_ROOT_PASSWORD: "secret"
   MYSQL_DATABASE: "app"
@@ -22,9 +22,9 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   labels:
-    app: iam-v1-api-collector-db
-  name: iam-v1-api-collector-db-pvc
-  namespace: xpipe-lucapitzoi
+    app: lab-v1-api-collector-db
+  name: lab-v1-api-collector-db-pvc
+  namespace: xpipe-dorjecurreli
 #provisioner: kubernetes.io/aws-ebs
 spec:
   accessModes:
@@ -38,15 +38,15 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: iam-v1-api-collector-db
-  name: iam-v1-api-collector-db
-  namespace: xpipe-lucapitzoi
+    app: lab-v1-api-collector-db
+  name: lab-v1-api-collector-db
+  namespace: xpipe-dorjecurreli
 spec:
   replicas: 1
   revisionHistoryLimit: 10
   selector:
     matchLabels:
-      app: iam-v1-api-collector-db
+      app: lab-v1-api-collector-db
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -55,7 +55,7 @@ spec:
   template:
     metadata:
       labels:
-        app: iam-v1-api-collector-db
+        app: lab-v1-api-collector-db
     spec:
       initContainers:
         - name: init-lostfound
@@ -63,7 +63,7 @@ spec:
           command: [ "sh", "-c", "rm -Rf /var/lib/mysql/lost+found" ]
           volumeMounts:
             - mountPath: /var/lib/mysql
-              name: iam-v1-api-collector-db-volume
+              name: lab-v1-api-collector-db-volume
           resources:
             requests:
               cpu: 10m
@@ -73,7 +73,7 @@ spec:
         #  command: [ "bash", "-c", "microdnf install rsync && rsync -ravP /var/lib/mysql/ /data/" ]
         #  volumeMounts:
         #    - mountPath: /data
-        #      name: iam-v1-api-collector-db-volume
+        #      name: lab-v1-api-collector-db-volume
         #  resources:
         #    requests:
         #      cpu: 10m
@@ -83,7 +83,7 @@ spec:
           command: [ "sh", "-c", "chown -R 999:999 /var/lib/mysql" ]
           volumeMounts:
             - mountPath: /var/lib/mysql
-              name: iam-v1-api-collector-db-volume
+              name: lab-v1-api-collector-db-volume
           resources:
             requests:
               cpu: 10m
@@ -94,27 +94,27 @@ spec:
           valueFrom:
             configMapKeyRef:
               key: MYSQL_MAX_CONNECTIONS
-              name: iam-v1-api-collector-db-config
+              name: lab-v1-api-collector-db-config
         - name: MYSQL_ROOT_PASSWORD
           valueFrom:
             secretKeyRef:
               key: MYSQL_ROOT_PASSWORD
-              name: iam-v1-api-collector-db-secret
+              name: lab-v1-api-collector-db-secret
         - name: MYSQL_DATABASE
           valueFrom:
             secretKeyRef:
               key: MYSQL_DATABASE
-              name: iam-v1-api-collector-db-secret
+              name: lab-v1-api-collector-db-secret
         - name: MYSQL_USER
           valueFrom:
             secretKeyRef:
               key: MYSQL_USER
-              name: iam-v1-api-collector-db-secret
+              name: lab-v1-api-collector-db-secret
         - name: MYSQL_PASSWORD
           valueFrom:
             secretKeyRef:
               key: MYSQL_PASSWORD
-              name: iam-v1-api-collector-db-secret
+              name: lab-v1-api-collector-db-secret
         image: mysql:8.0.37
         imagePullPolicy: IfNotPresent
         #command: [ "tail" ]
@@ -131,7 +131,7 @@ spec:
 #          periodSeconds: 10
 #          successThreshold: 1
 #          timeoutSeconds: 1
-        name: iam-v1-api-collector-db
+        name: lab-v1-api-collector-db
         ports:
         - containerPort: 3306
           protocol: TCP
@@ -156,23 +156,23 @@ spec:
         terminationMessagePolicy: File
         volumeMounts:
         - mountPath: /var/lib/mysql
-          name: iam-v1-api-collector-db-volume
+          name: lab-v1-api-collector-db-volume
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
       terminationGracePeriodSeconds: 30
       volumes:
-      - name: iam-v1-api-collector-db-volume
+      - name: lab-v1-api-collector-db-volume
         persistentVolumeClaim:
-          claimName: iam-v1-api-collector-db-pvc
+          claimName: lab-v1-api-collector-db-pvc
 ---
 apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: iam-v1-api-collector-db
-  name: iam-v1-api-collector-db
-  namespace: xpipe-lucapitzoi
+    app: lab-v1-api-collector-db
+  name: lab-v1-api-collector-db
+  namespace: xpipe-dorjecurreli
 spec:
   ports:
   - name: mysql
@@ -180,7 +180,7 @@ spec:
     protocol: TCP
     targetPort: 3306
   selector:
-    app: iam-v1-api-collector-db
+    app: lab-v1-api-collector-db
   sessionAffinity: None
   type: ClusterIP
 ---
@@ -188,8 +188,8 @@ spec:
 #kind: PersistentVolumeClaim
 #metadata:
 #  labels:
-#    app: iam-v1-api-collector-db
-#  name: iam-v1-api-collector-db
+#    app: lab-v1-api-collector-db
+#  name: lab-v1-api-collector-db
 #  namespace: example-cms
 #provisioner: rancher.io/local-path
 #spec:
