--- a/IaC/xpipe-lucapitzoi/lab-v1-api-collector/db.yaml
+++ b/IaC/xpipe-lucapitzoi/lab-v1-api-collector/db.yaml
@@ -1,31 +1,29 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: iam-v1-api-collector-idx-config
+  name: lab-v1-api-collector-db-config
   namespace: xpipe-lucapitzoi
 data:
-  ES_JAVA_OPTS: "-Xmx1024m -Xms1024m"
-  cluster.name: "iam-v1-api-collector"
-  #xpack.security.enabled: true
-  # Use single node discovery in order to disable production mode and avoid bootstrap checks.
-  # see: https://www.elastic.co/guide/en/elasticsearch/reference/current/bootstrap-checks.html
-  discovery.type: "single-node"
+  MYSQL_MAX_CONNECTIONS: "500"
 ---
 apiVersion: v1
 kind: Secret
 type: Opaque
 metadata:
-  name: iam-v1-api-collector-idx-secret
+  name: lab-v1-api-collector-db-secret
   namespace: xpipe-lucapitzoi
 stringData:
-  ELASTIC_PASSWORD: "secret"
+  MYSQL_ROOT_PASSWORD: "secret"
+  MYSQL_DATABASE: "app"
+  MYSQL_USER: "user"
+  MYSQL_PASSWORD: "secret"
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   labels:
-    app: iam-v1-api-collector-idx
-  name: iam-v1-api-collector-idx-pvc
+    app: lab-v1-api-collector-db
+  name: lab-v1-api-collector-db-pvc
   namespace: xpipe-lucapitzoi
 #provisioner: kubernetes.io/aws-ebs
 spec:
@@ -34,21 +32,21 @@ spec:
   storageClassName: longhorn
   resources:
     requests:
-      storage: 1Gi
+      storage: 8Gi
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: iam-v1-api-collector-idx
-  name: iam-v1-api-collector-idx
+    app: lab-v1-api-collector-db
+  name: lab-v1-api-collector-db
   namespace: xpipe-lucapitzoi
 spec:
   replicas: 1
   revisionHistoryLimit: 10
   selector:
     matchLabels:
-      app: iam-v1-api-collector-idx
+      app: lab-v1-api-collector-db
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -57,62 +55,67 @@ spec:
   template:
     metadata:
       labels:
-        app: iam-v1-api-collector-idx
+        app: lab-v1-api-collector-db
     spec:
       initContainers:
         - name: init-lostfound
           image: busybox
-          command: [ "sh", "-c", "rm -Rf /usr/share/elasticsearch/data/lost+found" ]
+          command: [ "sh", "-c", "rm -Rf /var/lib/mysql/lost+found" ]
           volumeMounts:
-            - mountPath: /usr/share/elasticsearch/data
-              name: iam-v1-api-collector-idx-volume
+            - mountPath: /var/lib/mysql
+              name: lab-v1-api-collector-db-volume
           resources:
             requests:
               cpu: 10m
               memory: 10Mi
-        #- name: init-elasticdata
-        #  image: elasticsearch:7.13.3
-        #  command: [ "bash", "-c", "yum install -y rsync && rsync -ravP /usr/share/elasticsearch/data/ /data/" ]
+        #- name: init-mysqldata
+        #  image: mysql:8.0.37
+        #  command: [ "bash", "-c", "microdnf install rsync && rsync -ravP /var/lib/mysql/ /data/" ]
         #  volumeMounts:
         #    - mountPath: /data
-        #      name: iam-v1-api-collector-idx-volume
+        #      name: lab-v1-api-collector-db-volume
         #  resources:
         #    requests:
         #      cpu: 10m
         #      memory: 10Mi
-        - name: init-elasticsearch
+        - name: init-mysql
           image: busybox
-          command: [ "sh", "-c", "chown -R 1000:0 /usr/share/elasticsearch/data" ]
+          command: [ "sh", "-c", "chown -R 999:999 /var/lib/mysql" ]
           volumeMounts:
-            - mountPath: /usr/share/elasticsearch/data
-              name: iam-v1-api-collector-idx-volume
+            - mountPath: /var/lib/mysql
+              name: lab-v1-api-collector-db-volume
           resources:
             requests:
               cpu: 10m
               memory: 10Mi
       containers:
       - env:
-        - name: ES_JAVA_OPTS
+        - name: MYSQL_MAX_CONNECTIONS
           valueFrom:
             configMapKeyRef:
-              key: ES_JAVA_OPTS
-              name: iam-v1-api-collector-idx-config
-        - name: cluster.name
-          valueFrom:
-            configMapKeyRef:
-              key: cluster.name
-              name: iam-v1-api-collector-idx-config
-        - name: discovery.type
-          valueFrom:
-            configMapKeyRef:
-              key: discovery.type
-              name: iam-v1-api-collector-idx-config
-        - name: ELASTIC_PASSWORD
+              key: MYSQL_MAX_CONNECTIONS
+              name: lab-v1-api-collector-db-config
+        - name: MYSQL_ROOT_PASSWORD
           valueFrom:
             secretKeyRef:
-              key: ELASTIC_PASSWORD
-              name: iam-v1-api-collector-idx-secret
-        image: elasticsearch:7.13.3
+              key: MYSQL_ROOT_PASSWORD
+              name: lab-v1-api-collector-db-secret
+        - name: MYSQL_DATABASE
+          valueFrom:
+            secretKeyRef:
+              key: MYSQL_DATABASE
+              name: lab-v1-api-collector-db-secret
+        - name: MYSQL_USER
+          valueFrom:
+            secretKeyRef:
+              key: MYSQL_USER
+              name: lab-v1-api-collector-db-secret
+        - name: MYSQL_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              key: MYSQL_PASSWORD
+              name: lab-v1-api-collector-db-secret
+        image: mysql:8.0.37
         imagePullPolicy: IfNotPresent
         #command: [ "tail" ]
         #args: [ "-f", "/dev/null" ]
@@ -128,11 +131,9 @@ spec:
 #          periodSeconds: 10
 #          successThreshold: 1
 #          timeoutSeconds: 1
-        name: iam-v1-api-collector-idx
+        name: lab-v1-api-collector-db
         ports:
-        - containerPort: 9200
-          protocol: TCP
-        - containerPort: 9300
+        - containerPort: 3306
           protocol: TCP
 #        readinessProbe:
 #          exec:
@@ -148,41 +149,53 @@ spec:
 #          timeoutSeconds: 1
         resources:
           limits:
-            memory: 2048Mi
+            memory: 1024Mi
           requests:
-            memory: 2048Mi
+            memory: 1024Mi
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
         volumeMounts:
-        - mountPath: /usr/share/elasticsearch/data
-          name: iam-v1-api-collector-idx-volume
+        - mountPath: /var/lib/mysql
+          name: lab-v1-api-collector-db-volume
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
       terminationGracePeriodSeconds: 30
       volumes:
-      - name: iam-v1-api-collector-idx-volume
+      - name: lab-v1-api-collector-db-volume
         persistentVolumeClaim:
-          claimName: iam-v1-api-collector-idx-pvc
+          claimName: lab-v1-api-collector-db-pvc
 ---
 apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: iam-v1-api-collector-idx
-  name: iam-v1-api-collector-idx
+    app: lab-v1-api-collector-db
+  name: lab-v1-api-collector-db
   namespace: xpipe-lucapitzoi
 spec:
   ports:
-  - name: elasticsearch
-    port: 9200
+  - name: mysql
+    port: 3306
     protocol: TCP
-    targetPort: 9200
-  - name: elasticsearch-internal
-    port: 9300
-    protocol: TCP
-    targetPort: 9300
+    targetPort: 3306
   selector:
-    app: iam-v1-api-collector-idx
+    app: lab-v1-api-collector-db
   sessionAffinity: None
   type: ClusterIP
+---
+#apiVersion: v1
+#kind: PersistentVolumeClaim
+#metadata:
+#  labels:
+#    app: lab-v1-api-collector-db
+#  name: lab-v1-api-collector-db
+#  namespace: example-cms
+#provisioner: rancher.io/local-path
+#spec:
+# accessModes:
+#  - ReadWriteOnce
+# resources:
+#  requests:
+#   storage: 1Gi
+# storageClassName: default
