--- a/Products/XPipe/V1/xpipe-v1-web-portal/src/.gitignore
+++ b/Products/XPipe/V1/xpipe-v1-web-portal/src/.gitignore
@@ -72,6 +72,13 @@ atlassian*
 !/generated/.htaccess
 .DS_Store
 
+# Read Only setup
+/vendor
+/var
+/generated
+/pub/static
+/pub/media
+
 # Secrets
 #auth.json
 #/app/etc/env-production.php
