--- a/Iam/V1/Collector/iam-v1-api-collector/src/.gitignore
+++ b/Iam/V1/Collector/iam-v1-api-collector/src/.gitignore
@@ -72,6 +72,13 @@ atlassian*
 !/generated/.htaccess
 .DS_Store
 
+# Read Only setup
+/vendor
+/var
+/generated
+/pub/static
+/pub/media
+
 # Secrets
 #auth.json
 #/app/etc/env-production.php
